@startuml
package [device_layer] as C_0000986093094798350564 {
package [interface] as C_0003781717078107690174 {
class "IDisplay" as C_0001688748224213787617
class C_0001688748224213787617 {
__
}
class "IcbDisplay" as C_0004794764142398018568
class C_0004794764142398018568 {
__
}
}
class "Ssd1306" as C_0009753622253334925123
class C_0009753622253334925123 {
__
}
}
package [app] as C_0016010562093136641194 {
class "IGui" as C_0013636042511666871916
class C_0013636042511666871916 {
__
}
class "Gui" as C_0000948712860644548974
class C_0000948712860644548974 {
__
}
}
package [hardware_layer] as C_0011116301123848983743 {
package [interface] as C_0004639720752499271964 {
class "II2c" as C_0001955225274653391297
class C_0001955225274653391297 {
__
}
class "IcbI2c" as C_0001043120281719416176
class C_0001043120281719416176 {
__
}
class "ISerialCommander" as C_0012909992160874174612
class C_0012909992160874174612 {
__
}
class "IcbSerialCommander" as C_0006717726296434081648
class C_0006717726296434081648 {
__
}
}
class "I2c" as C_0000102306443127453571
class C_0000102306443127453571 {
__
}
class "SerialCommander" as C_0012458789690594031884
class C_0012458789690594031884 {
__
}
}
package [manager] as C_0001382217397396890871 {
class "HardwareManager" as C_0013820397576961944853
class C_0013820397576961944853 {
__
}
class "DeviceManager" as C_0013863018875624683104
class C_0013863018875624683104 {
__
}
class "ApplicationManager" as C_0013307138085226643557
class C_0013307138085226643557 {
__
}
}
C_0009753622253334925123 --> C_0004794764142398018568 : -icbDisplay
C_0009753622253334925123 --> C_0012909992160874174612 : -iSerial
C_0001688748224213787617 <|-- C_0009753622253334925123
C_0006717726296434081648 <|-- C_0009753622253334925123
C_0000948712860644548974 --> C_0001688748224213787617 : -iDisplay
C_0004794764142398018568 <|-- C_0000948712860644548974
C_0013636042511666871916 <|-- C_0000948712860644548974
C_0000102306443127453571 --> C_0001043120281719416176 : -icbI2c
C_0001955225274653391297 <|-- C_0000102306443127453571
C_0012458789690594031884 --> C_0006717726296434081648 : -icbSerialCommander
C_0012458789690594031884 --> C_0001955225274653391297 : -iI2c
C_0012909992160874174612 <|-- C_0012458789690594031884
C_0001043120281719416176 <|-- C_0012458789690594031884
C_0013820397576961944853 o-- C_0000102306443127453571 : -sensorI2c
C_0013820397576961944853 o-- C_0000102306443127453571 : -displayI2c
C_0013863018875624683104 ..> C_0013820397576961944853
C_0013863018875624683104 o-- C_0012458789690594031884 : -aoSensor
C_0013863018875624683104 o-- C_0012458789690594031884 : -aoDisplay
C_0013863018875624683104 o-- C_0009753622253334925123 : -ssd1306
C_0013307138085226643557 ..> C_0013863018875624683104
C_0013307138085226643557 o-- C_0000948712860644548974 : -aoGui

'Generated with clang-uml, version 0.6.0
'LLVM version Ubuntu clang version 15.0.7
@enduml
